--- a/SED 0324/MainWindow.xaml
+++ b/SED 0324/MainWindow.xaml
@@ -7,8 +7,7 @@
         mc:Ignorable="d"
         Title="Allround-App" Height="450" Width="800">
     <Grid Cursor="AppStarting">
-        <Button x:Name="button1" Content="Click Me?" HorizontalAlignment="Left" Margin="63,43,0,0" VerticalAlignment="Top" Height="50" Width="120" Click="button_Click" Cursor="AppStarting" BorderBrush="Red" Background="#FFFF7E7E" Foreground="#FF08FF00" FontFamily="Bahnschrift"/>
-        <CheckBox x:Name="checkBox" Content="CheckBox" HorizontalAlignment="Left" Margin="309,0,0,0" VerticalAlignment="Center"/>
-
+        <Button x:Name="button" Content="Click Me?" HorizontalAlignment="Left" Margin="63,43,0,0" VerticalAlignment="Top" Height="50" Width="120" Click="button_Click" Cursor="AppStarting" BorderBrush="Red" Background="#FFFF7E7E" Foreground="#FF08FF00" FontFamily="Bahnschrift"/>
+      
     </Grid>
 </Window>
